# gdal2pgsql

./: LICENSE  README.md  setup.cfg
gdal2pgsql/: ogr2ogr.py  raster2pgsql.py
