[metadata]
name = gdal2pgsql
version = 0.0.1
author = Diego Moreira and Alisson Palmeira
author_email = diego@khartes.com.br and alisson.palmeira@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/khartes/gdal2pgsql
project_urls =
    Bug Tracker = https://github.com/khartes/gdal2pgsql/issues
keywords = gdal, ogr, postgis, geoprocessing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Scientific/Engineering :: GIS
    Operating System :: OS Independent

[options]
package_dir =
    = gdal2pgsql
packages = find:
python_requires = >=3.6

[options.packages.find]
where = gdal2pgsql